# df-derive

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: bench.yml  ci.yml  publish.yml
comparison-bench/: BENCHMARK.md  Cargo.toml  README.md
comparison-bench/src/: main.rs
df-derive-core/src/: lib.rs
df-derive-macros/src/: lib.rs
df-derive-macros/src/attrs/: field.rs  field_conflicts.rs  mod.rs
df-derive-macros/src/codegen/: column_emit.rs  columnar_impl.rs  mod.rs  nested_names.rs  schema.rs  schema_nested.rs  support.rs  trait_impl.rs
df-derive-macros/src/codegen/encoder/: emit.rs  leaf_kind.rs  nested_columns.rs  nested_leaf.rs  projected.rs
df-derive-macros/src/codegen/encoder/idents/: support.rs
df-derive-macros/src/ir/: columns.rs  mod.rs  names.rs  structs.rs
df-derive-macros/src/lower/: field.rs  projection.rs
df-derive/src/: lib.rs
df-derive/tests/: architecture.rs  progress.rs  runtime_semantics.rs
df-derive/tests/fail/: 100-fail-unknown-field-attribute.stderr  132-fail-as-str-concrete-type-without-as-ref.stderr  134-fail-as-string-concrete-type-without-display.stderr  149-fail-missing-concrete-eager-bounds.stderr  152-fail-flatten-invalid-shapes.rs  152-fail-flatten-invalid-shapes.stderr  153-fail-flatten-conflicts.rs  153-fail-flatten-conflicts.stderr  154-fail-flatten-bad-prefix.rs  154-fail-flatten-bad-prefix.stderr
df-derive/tests/pass/: 15-as-string-on-struct.rs  19-complex-wrappers.rs  21-field-as-str-attribute.rs  22-as-str-on-struct.rs  26-generics-no-clone.rs  49-flatten-field.rs
df-derive/tests/runtime/: 33-vec-option-vec-mid-stack.rs  38-smart-pointers.rs  39-tuple-fields.rs  57-mixed-row-behavior-lock.rs  58-mixed-wrapper-shape-row.rs  59-tuple-vector-projection.rs  60-flatten-field.rs
