[workspace]
members = ["df-derive", "df-derive-core", "df-derive-macros"]
resolver = "3"

[workspace.package]
version = "0.3.1"
edition = "2024"
rust-version = "1.91"
authors = ["Giovanni Ramistella <letter.brigade_7s@icloud.com>"]
license = "MIT"
repository = "https://github.com/gramistella/df-derive"
homepage = "https://github.com/gramistella/df-derive"

[workspace.dependencies]
polars = { version = "0.54", default-features = false }
polars-arrow = "0.54"
rust_decimal = { version = "1.42", default-features = false }
df-derive-core = { version = "0.3", path = "df-derive-core", default-features = false }
df-derive-macros = { version = "0.3", path = "df-derive-macros" }

[profile.bench]
opt-level = 3
codegen-units = 1
incremental = false
debug = false
lto = false
